[package]
name = "ecdsa-rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.148", features = ["derive"] }
serde_json = "1.0.89"
k256 = { version = "0.11.6", features = ["ecdsa", "keccak256"] }
sha3 = "0.10.6"
hex = "0.4.3"
actix-cors = "0.6.4"
